--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "express": "^4.19.2",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
