--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
